--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
         <input type="text" id="note-content" placeholder="O que deseja anotar">
         <button class="add-note"><i class="bi bi-plus-lg"></i></button>
     </div>
-    <div id="notes-container">
-        <div class="note">
-            <textarea placeholder="Adicione o texto"></textarea>
-            <i class="bi bi-pin"></i>
-            <i class="bi bi-x-lg"></i>
-            <i class="bi bi-file-earmark"></i>
-        </div>
-    </div>
+    <div id="notes-container"></div>
 </body>
 </html>
