--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>VecNotes</title>
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>VecNotes</h1>
-        <div id="search-container">
-            <i class="bi bi-search"></i>
-            <input type="text" id="search-input" placeholder="Procure uma nota">
-        </div>
-        <button id="export-notes">
-            Exportar CSV <i class="bi bi-download"></i>
-        </button>
+      <h1>DevNotes</h1>
+      <div id="search-container">
+        <i class="bi bi-search"></i>
+        <input
+          type="text"
+          id="search-input"
+          placeholder="Busque por uma nota..."
+        />
+      </div>
+      <button id="export-notes">
+        Exportar CSV <i class="bi bi-download"></i>
+      </button>
     </header>
     <div id="add-note-container">
-        <input type="text" id="note-content" placeholder="O que deseja anotar">
-        <button class="add-note"><i class="bi bi-plus-lg"></i></button>
+      <input type="text" id="note-content" placeholder="O que deseja anotar?" />
+      <button class="add-note"><i class="bi bi-plus-lg"></i></button>
     </div>
     <div id="notes-container"></div>
-</body>
+  </body>
 </html>
