--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   </head>
   <body>
     <header>
-      <h1>DevNotes</h1>
+      <h1>VecNotes</h1>
       <div id="search-container">
-        <i class="bi bi-search"></i>
         <input
           type="text"
           id="search-input"
